[package]
name = "mdma"
version = "0.1.0"
edition = "2024"

[dependencies]
ciborium = "0.2.2"
num_enum = "0.7.4"
serde = { version = "1.0.219", features = ["alloc", "derive", "rc"] }
serde_repr = "0.1.20"

[dev-dependencies]
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.9.2"
rand_xoshiro = "0.7.0"
